# portfolio

./: readme.txt
bash/: szumski-bash.sh
c/: queue.c  queue.h
c++/Deque/: CMakeLists.txt
c++/Deque/src/: AbstractDeque.h  Deque.h  Iterator.h
c++/Deque/test/: CMakeLists.txt  DequeIteratorTest.cpp  DequeTest.cpp
c++/Dijkstra/: CMakeLists.txt
c++/Dijkstra/note/: graph_represent.txt
c++/Dijkstra/src/: AbstractDijkstra.h  CMakeLists.txt  Dijkstra.cpp  Dijkstra.h  Pair.h
c++/Dijkstra/test/: CMakeLists.txt  DijkstraTest.cpp
c++/List/: .gitignore  CMakeLists.txt
c++/List/src/: AbstractIterator.h  AbstractList.h  ConstIterator.h  (+2 more)
c++/Queue/: CMakeLists.txt
c++/String/: CMakeLists.txt
c++/String/test/: CMakeLists.txt  StringAppendTest.cpp  StringOperatorTest.cpp
perl/: Ebug.pm  szumski-PERL.pl
php, html, css, js, jquery/biblioteka/: index.html  style.css
php, html, css, js, jquery/eko/: footer.inc  header.inc  index.php  right.inc
php, html, css, js, jquery/paulinaszynkowska/: doswiadczenie.php  index.php
php, html, css, js, jquery/rss/: mwd_rss.php  mwd_rss_status  wykop_rss.php  wykop_rss_status
php, html, css, js, jquery/skylark/: index.htm  kontakt.htm  oferta.htm
php, html, css, js, jquery/szumskistudio/: index.html
php, html, css, js, jquery/zarabianiepieniedzy/: chce_zarobic_teraz.html  co_oferujemy.html  index.html  jak_zarabiac.html  jak_zarabiac_2.html  jak_zarabiac_3.html  po_co_zarabiac.html  po_co_zarabiac_2.html  polityka_prywatnosci.html  polityka_prywatnosci_2.html  polityka_prywatnosci_3.html  prezentacja.html  wymagania.html
(+50 files in other folders)
